@@ -18,8 +18,8 @@ environment:
   - R_VERSION: devel
     R_ARCH: x64
 
-  - R_VERSION: devel
-    R_ARCH: i386
+  - R_VERSION: oldrel
+    R_ARCH: x64
     
 matrix:
   fast_finish: true
