@@ -1,29 +1,31 @@
-00e9fcf4388f00b1ce1e5a035c99b24e *cleanup
-d1a18afec85eef22621eecee70b96ba3 *configure
-aeb9ebedc7435ff3dea939898ec4ef16 *DESCRIPTION
-39e672589f80a3ff07072852dccb80fa *inst/NEWS.Rd
-7f3c323c9e1d55ca0f6f2cb3b63475d8 *LICENSE
-29da4fd77003d1e082081b64433fc4da *man/count.Rd
-53126fa07b2c60930510e1a66e8e8325 *man/fpos.Rd
-d8545dceac249fa2f57b12a367d252c5 *man/funique.Rd
-c495d3470c465d685c0a6afc3052447d *man/iif.Rd
-b98c5f5615a97e3bf9578ea556f812bf *man/nif.Rd
-8ab5eb8f3d53173409797ce9cd04a4c0 *man/psum.Rd
-a8f88fa29539089c7013cbd7ffec5f75 *man/setlevels.Rd
-c94da43c627ad077e9ce04cbd208078a *man/topn.Rd
-e926b9000dfefbfdd1821bbc63860c05 *man/vswitch.Rd
-4f1556c6350a31ee12af65be0a53edba *NAMESPACE
-522c4d45bccfc82222b41412545200cb *R/call.R
-41c5cf97409a34bda2f88c1f653c6172 *README.md
-1a5c24008a5bb813fba87b875d21bd30 *src/dup.c
-ab323f703f131b5a2a1e068314b5a8ee *src/dupLen.c
-e1ed4f737c3f31102408f248a5468a8a *src/fpos.c
-f4f87b1fb26b5cafdd6e563ce881f381 *src/iif.c
-18bb9b31a2f37668b8dddbfcf4d7e4a3 *src/init.c
-59371ba99cababd4079b867b9fcd389e *src/kit.h
-cde2535a36d0ee0e2c04232c0593da84 *src/Makevars.in
-47af37b6e045426e44e511fce458c6fe *src/Makevars.win
-64d267089b2e33decdd47d6e93f91ad8 *src/psum.c
-f34cd21244931fdc59be7c18641fb8b4 *src/topn.c
-10beba699ae7c23bc776b34578350069 *src/utils.c
-a2666bd9c9c0f677b884b54fee84e252 *src/vswitch.c
+6071edd604dbeb75308cfbedc7790398 *cleanup
+30a444c58adaf9b99783d22d75d60c61 *configure
+2f5c53949e9b803d6a51f29066966f70 *DESCRIPTION
+d35ef43a14f3f264d1637211ea8c344d *inst/NEWS.Rd
+a87b0f223435ed35607e8514562b8bfe *LICENSE
+8f19a2c9feb2f352580fd4892650f285 *man/count.Rd
+d143e1321d840bb810d9648e54e22c9c *man/fpos.Rd
+982f9a79fd960150abc3c743f2ce7c07 *man/funique.Rd
+3e0b7c90f2f4a9c4be404cbc6ac69b16 *man/iif.Rd
+578fe4903cc4f5d7bc5a6f346be1e9e9 *man/nif.Rd
+642f1b417705a95de829d995fecf476b *man/psum.Rd
+14e3add07190fd18d0161f4f0b0b5257 *man/setlevels.Rd
+e0d3b091b5182fdcc8868c93a2c59476 *man/topn.Rd
+dc9e6e1fbeb0c05694f566970bc57b10 *man/vswitch.Rd
+8b041db1ae628bd8241f5e57db318669 *NAMESPACE
+993fb0fcb67daa7df018344f795635c6 *R/call.R
+fa0ca12018176564236efd16b8d8e9d8 *README.md
+80b300c6200dc8c1f0078ea4c8baf9de *src/dup.c
+720a801c02cf3eb1a8d4c61930b0d3d7 *src/dupLen.c
+84230b3325b0d1b661e4688f9aac670a *src/fpos.c
+d800a56f0076c3d2aa747ee02653f0d2 *src/iif.c
+e7f79b9871ca0c5b93d652713982e7ec *src/init.c
+36c0f5e0615a12b304734d987adde491 *src/kit.h
+63b898312ccf39a20bd7fbd8dcca5621 *src/Makevars.in
+95e3011e37d9dde0d75f3a3819b2acd3 *src/Makevars.win
+d2f4fdbd388ae96944e5de4e7c8fb138 *src/psum.c
+91d603f722355667800428c1a6c03d34 *src/topn.c
+edf1d9bce4c98177e35e4a96a9f12355 *src/utils.c
+403cced156980d4dab25d16d67dadb61 *src/vswitch.c
+37ad3556afef22985b14a490a3b0ea27 *tests/test_kit.R
+1366b64153b864c09c731e88c5d21f65 *tests/test_kit.Rout.save
